home about and contact

--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
   <header class="header">
     <a href="#" class="logo">Developer</a>
     <nav class="nav-items">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="home.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
   <main>
