updating home href to deals

--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
   <header class="header">
     <a href="#" class="logo">Developer</a>
     <nav class="nav-items">
-      <a href="home.html">Home</a>
+      <a href="deals.html">Deals</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
   <main>
     <div class="intro">
-      <h1>TESTING</h1>
+      <h1>WEB-SKILLS</h1>
       <p>I am a web developer and I love to create websites.</p>
       <button>Learn More</button>
     </div>
