--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   <main>
     <div class="intro">
       <h1>WEB-SKILLS</h1>
-      <p>I am a DevOps Engineer.</p>
+      <p>I am a DevOps BBI Engineer.</p>
       <button>Learn More</button>
     </div>
     <div class="achievements">
